add missing jvm opts (#7)